# xstocks-fun

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  LICENSE  README.md  docker-compose.yml  health-check.js  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  vercel.json
apps/web/: next.config.js  package.json  tailwind.config.js  tsconfig.json
backend/: .env.example  Dockerfile  package.json  pnpm-lock.yaml  render.yaml  server.js
backend/config/: constants.js
backend/middleware/: rate-limiter.js  validation.js
backend/services/: execution-monitoring-service.js  jupiter-service.js  package.json  pnpm-lock.yaml  token-service.js  wallet-service.js  websocket-service.js
contracts/stock_simple/: Anchor.toml  Cargo.toml  build_output.txt  build_output2.txt  build_output3.txt  cargo_build_output.txt  final_build.txt  final_build2.txt  toolchain_output.txt
contracts/stock_simple/.cargo/: config.toml
contracts/stock_simple/src/: jupiter_integration.rs  jupiter_real_integration.rs  lib.rs  xstocks_mints.rs
contracts/test_project/: Anchor.toml
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
frontend/api/: intel-proxy.ts
frontend/public/: tokens.json
frontend/src/: index.css  main.tsx  types.js
intel-microservice/: xstocks-intel.service
intel-microservice/python-yfinance-service/: .env.example  Dockerfile  Dockerfile.aws  bl_response.json  deploy-ec2.sh  fresh_response.json  main.py  memory_optimizer.py  (+5 more)
shared/: types.ts
(+125 files in other folders)
