[package]
name = "xstocks_fun"
version = "0.1.0"
description = "xStocks.fun - Democratize stock investing on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "xstocks_fun"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"

[profile.release]
overflow-checks = true
lto = "thin"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
debug = false
overflow-checks = false
